--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
-  <div class="pb-10 text-center">
+  <div class="pt-2ng pb-2 text-center">
     <p class="text-gray-600"> Criado por
       <a href="https://github.com/IPNeuhauser" class="
         text-blue-600
