--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,22 +8,7 @@
       </div>
 
       <!-- User -->
-      <div class="relative">
-        <div
-          class="
-          cursor-pointer
-          w-10
-          h-10
-          bg-blue-200
-          text-blue-600
-          flex
-          items-center
-          justify-center
-          rounded-full"
-        >
-        I
-        </div>
-      </div>
+      <app-avatar></app-avatar>
     </div>
   </div>
 </div>
