--- a/src/app/components/new-post/new-post.component.html
+++ b/src/app/components/new-post/new-post.component.html
@@ -1,23 +1,12 @@
 <div class="w-[650px] bg-white rounded-lg shadow p-6 mb-8">
   <div class="flex justify-center w-full">
     <!-- Avatar Circle -->
-    <div class="flex-shrink-0 mr-5">
-      <div class="
-      cursor-pointer
-      font-bold
-      w-12 h-12
-      bg-gray-300
-      flex items-center justify-center
-      rounded-full
-      ">
-        I
-      </div>
-    </div>
+    <app-avatar></app-avatar>
 
     <!-- Form -->
     <div class="flex-1">
       <!-- Textarea -->
-      <textarea [(ngModel)]="tweetMessage" (input)="changeTweet()"
+      <textarea [(ngModel)]="tweetMessage" (input)="changeTweet()" (keyup.enter)="sendTweet()"
       class="
       mb-2 bg-gray-200
       focus:outline-none
