--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,17 @@
-<header class="mb-10 w-full">
-  <app-header />
-</header>
+<div class="w-full overflow-auto">
+  <header class="mb-10 w-full">
+    <app-header />
+  </header>
 
-<div class="flex items-center justify-center container mx-auto">
-  <app-new-post />
+  <div class="flex items-center justify-center container mx-auto">
+    <app-new-post />
+  </div>
+
+  <div class="flex items-center justify-center container mx-auto flex-col-reverse">
+    <app-tweet *ngFor="let message of messages" tweetMessage="{{message}}"/>
+  </div>
 </div>
 
-<footer class="fixed bottom-0 m-auto w-full">
+<footer class="fixed bottom-0 m-auto w-full bg-gray-200">
   <app-footer />
 </footer>
